# minecraft

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: main.c.D76172D705E28289.idx  main.cpp.B3604C75843805EE.idx
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  minecraftd
release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  minecraft
src/: main.c  main.cpp
src/Shaders/: compile.sh
